# USTC_SSE_Robot

./: .gitignore  README.md
作业/SA19225404_吴语港_作业1/: CMakeLists.txt
作业/SA19225404_吴语港_作业1/include/: CMakeLists.txt  hello.c  hello.h
作业/SA19225404_吴语港_作业1/src/: CMakeLists.txt  useHello.c
作业/SA19225404_吴语港_作业2/: SA19225404_吴语港_作业2.docx
作业/SA19225404_吴语港_作业3/: Astar linux.rar  Astar win 跨平台 linux.rar  SA19225404_吴语港_作业3.docx
作业/SA19225404_吴语港_作业3/Astar linux/: CMakeLists.txt  astar.cpp  astar.h  costmap.cpp  costmap.h  grid_path.cpp  potential_calculator.h
作业/SA19225404_吴语港_作业3/Astar win 跨平台 linux/: Astar.sln
作业/SA19225404_吴语港_作业3/Robotic2019_homework3/: 作业3要求.txt
作业/SA19225404_吴语港_作业4/: SA19225404_吴语港_作业4.docx
实验/Robotics_Lab1/: common.py  test.py  video.py
实验/Robotics_Lab1_Code/: common.py  test.py
实验/Robotics_Lab2/: ~$botic_Lab2_SA19225404_吴语港.doc  双目摄像头.cpp
实验/Robotics_Lab2/Lab2_JoinMap/: joinMap.cpp
实验/Robotics_Lab3/ch7/: CMakeCache.txt  Makefile  cmake_install.cmake  feature_extraction  feature_extraction.cpp  pose_estimation_2d2d  pose_estimation_3d2d  pose_estimation_3d2d.cpp  pose_estimation_3d3d  pose_estimation_3d3d.cpp  triangulation
实验/Robotics_Lab4/: ~$botic_Lab4_SA19225404_吴语港.doc  代码和word以及思维导图地址.txt
实验/Robotics_Lab4/Robotic_Lab4_SA19225404_吴语港/: ORB_SLAM2.xmind
实验/Robotics_Lab5/: SA19225404_吴语港_Robotic_Group3_Lab5.c  硬件接口速查手册.xlsx  系统镜像下载说明.txt
实验/Robotics_Lab5/5.程序源码/: README.txt
实验/Robotics_Lab5/6.硬件资料/: 硬件接口速查手册.xlsx
实验/Robotics_Lab5/亚博智能上位机v2.0安装包/: sn.txt  (+1 more)
实验/颜色识别/: 6.py  colorList.py  main.py
(+1355 files in other folders)
