SET(LIB_SRC hello.c)

ADD_DEFINITIONS("-DLIBHELLO_BUILD")

ADD_LIBRARY(include SHARED ${LIB_SRC})

SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

SET_TARGET_PROPERTIES(include PROPERTIES OUTPUT_NAME "sayHello")

INSTALL(TARGETS include LIBRARY DESTINATION /usr/local/lib)
INSTALL(FILES "hello.h" DESTINATION /usr/loacl/include)
